--- a/Proposal/thesis_paper/jair paper.tex
+++ b/Proposal/thesis_paper/jair paper.tex
@@ -57,43 +57,29 @@ distinguishing features is available.
 In many real-world applications, however, the given set of features is not sufficient for inducing a high quality classifier.
 
 One approach for overcoming the difficulty resulting from an insufficiently expressive set of features, is to generate new features based on existing ones. 
-These feature generation approaches attempt to combine the given features in an effort to create better, more discriminatory features with regards to the induction problem at hand. As an example of this, The LFC algorithm \cite{ragavan1993complex} combines binary features through the use of logical operators such as $\land ,\lnot$.
-%There are many existing feature generation algorithms, most of which operating by combining existing features in order to produce new ones. The LFC algorithm \cite{ragavan1993complex} combines the original features using logical operators such as $\land ,\lnot$. LFC generates features using the current set of binary features (including generated ones), and requires that any new feature will yield an increase over the original features combined to create it, in terms of information gain.
-%The LDMT algorithm \cite{utgo1991linear} uses linear combinations of the original features to construct more informative ones. This allows for the use of non-binary features in feature generation approaches.
-%The FICUS algorithm \cite{markovitch2002feature} presents a general framework for using any set of constructors to combine features. This essentially generalizes the above approach, allowing for a customizable feature generation framework.
+These feature generation approaches attempt to combine the given feature set in an effort to create better, more discriminatory features with regards to the induction problem at hand. As an example of this, the LFC algorithm \cite{ragavan1993complex} combines binary features through the use of logical operators such as $\land ,\lnot$.
 
 These feature generation methods all provide us with ways to enhance the performance of induction algorithms through intelligent combinations of existing features. While this often suffices, there are many cases where merely combining existing features is not sufficient. 
-Supposed, for example, that the induction problem at hand is to locate diseases of patients given symptoms and personal information. 
-Looking at a genetic disorder such as Tay-Sachs \footnote{A recessive genetic disorder prevalent mostly among Ashkenazi Jews}, we would require a large sample of patients to identify it from symptoms alone, as many of them can be attributed to other disorders. Even looking at personal information might not be sufficient without a large and varied sample set. And yet, a human physician can identify risk and signs of Tay-Sachs based on these features, even if he is given only a single example, using his domain knowledge and deductive reasoning.
+Supposed, for example, that the induction problem at hand is to locate diseases of patients given their symptoms, as well as personal information. 
+Looking at a genetic disorder such as Tay-Sachs \footnote{A recessive genetic disorder prevalent mostly among Ashkenazi Jews}, existing induction approaches would require a prohibitively large sample of patients to identify it from symptoms alone, as many of them can be attributed to other disorders. Even considering the personal information of a patient is clearly not enough. Yet, despite all of the above issues, a human physician can easily identify risk and signs of Tay-Sachs based on these features, even if he is given only a single example, using his domain knowledge and deductive reasoning.
 
-In the past, before the overwhelming popularity of inductive learning techniques, another school of learning methods, Explanation-Based learning \cite{dejong1986explanation}, was explored as a way to allow automated learning of concepts. These methods relied on deduction of general concepts through the use of a knowledge base. Given an example and its target concept, these approaches attempt to find a small set of conditions within the knowledge base that prove the example is a member of that concept. By having multiple examples, it is possible to refine the common conditions for membership.
-Unlike inductive approaches, deductive methods attempt to utilize a knowledge base in order to construct logical deductions, and therefore require fewer examples.
+In the past, before the overwhelming popularity of inductive learning techniques, another school of learning methods, exemplified by works such as Explanation-Based learning \cite{dejong1986explanation}, was explored as a way to allow automated learning of concepts. These methods relied on deduction of general concepts through the use of a knowledge base. Given an example and its target concept, these approaches attempt to find a small set of conditions within the knowledge base that prove the example is a member of that concept. These approaches utilize additional examples to refine the common conditions for membership, yielding a better overall concept.
+Unlike inductive approaches, deductive methods attempt to utilize a knowledge base in order to construct logical deductions. A major advantage of this approach is that, given a sufficiently expressive knowledge base, it can identify complex concepts and relationships with only a few examples.
 
-%For this reason, newer approaches aim to incorporate additional knowledge from external sources in order to construct new and informative features.
-%\citeA{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on Wikipedia concepts. They create a mapping of words to Wikipedia articles, that serve as semantic concepts, then utilize the distance of words in the given text to those concepts as features. This approach produced positive results, especially in domains where data is sparse, such as text categorization on short texts.
-%\citeA{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features. They made use of Roget's Thesaurus as a resource, allowing them to better map words and phrases to their lexical meanings.
-
-While these deductive approaches offered an alternative to inductive learning, the lack of good, comprehensive knowledge bases can be considered a major factor in its decline.
+While these deductive approaches offered an alternative to inductive learning, the lack of good, comprehensive knowledge bases can be considered a major factor in their decline.
 In recent years, however, the Semantic Web project (see survey, \citeR{bizer2009linkedfull}) has constructed a large resource in the form of Semantic Linked Data. Semantic Linked Data contains type-annotated entities covering a multitude of domains and connected using multiple semantically meaningful relations. In essence, this resource can be used as a massive, highly connected knowledge base encompassing a wide variety of domains.
 
+Naturally, this raises the question of how we can utilize such knowledge bases without rendering the decades of advances and research invested into inductive learning approaches. To do so, we must utilize this knowledge base by generating features based on it, thus injecting it into the existing inductive learning framework. There have been several efforts in utilizing Linked Data for unsupervised feature generation. \citeA{cheng2011automatedfull}, for example, devise a framework for constructing features from linked data. By using intelligent queries, it is possible to construct features which utilize the knowledge base in a meaningful way. Despite this, the unsupervised nature of existing approaches limits us greatly when attempting to deduce more complex relationships between entities.
+In order to identify more complex hypotheses within the data, a different approach is necessary. %Such a method should work more similarly to deductive methods, attempting to locate conditions
 
-%This resource has led to the creation of several new approaches designed to utilize the new, ontology-based representation of knowledge \cite{losch2012graph,rios2014statistical}.
-%It should come as no surprise then, that there have been several efforts in utilizing Linked Data for unsupervised feature generation \cite{cheng2011automatedfull,paulheim2012unsupervisedfull}. \citeA{cheng2011automatedfull} devise a theoretical framework for constructing features from linked data. By specifying entity types relevant to the problem at hand, they restrict the space of possible features to a more manageable size, and allow for the creation of a reasonably small amount of features. They also note that this approach tends to lead to highly sparse feature vectors.
-%\citeA{paulheim2012unsupervisedfull} developed FeGeLOD, an automated, fully unsupervised framework that constructs features by using entity recognition techniques to locate semantically meaningful features in the data set, and expand upon those entities using relations within the Semantic Web. They then use feature selection techniques to remove features with a large percentage of missing, identical, or unique\footnote{Values which only appear in a single example} values. 
-
-%Existing feature generation approaches based on Linked Data can offer great benefits, as they can add useful type information, and often add semantic information such as actors playing in a given movie, or the population of a given city.
-%However, the unsupervised nature of existing approaches limits us greatly when attempting to identify more complex relationships between entities.
-
-Naturally, this raises the question of how we can utilize this knowledge base without losing the insights we have gained in inductive learning. To do so, we must utilize this knowledge base by generating features based on it, thus injecting it into our inductive learning problem. There have been several efforts in utilizing Linked Data for unsupervised feature generation. \citeA{cheng2011automatedfull}, for example, devise a framework for constructing features from linked data. By using intelligent queries, it is possible to construct features which utilize the knowledge base in a meaningful way. Despite this, the unsupervised nature of existing approaches limits us greatly when attempting to identify more complex relationships between entities. In order to create such relationships, a different approach is necessary.
-
-In this work, we present a new supervised methodology for generating complex features based on a relational knowledge base.  Our algorithm constructs new learning problems from existing feature values, using knowledge bases, such as the Semantic Web, as the features for the newly constructed problem.
-Using common induction algorithms, we can then construct a classifier that serves as a feature for the original problem. An important aspect of this approach is that it can be applied recursively within the new learning problem, allowing for an automated, data-driven, exploration of the large space of possible complex features. This allows us to discover powerful features that an unsupervised approach would have difficulty discovering.
+In this work, we present a new supervised methodology for generating complex features based on a relational knowledge base. Our algorithm constructs new learning problems from existing feature values, using knowledge bases, such as the Semantic Web, as the features for this newly constructed problem.
+Using common induction algorithms, we can then construct a classifier that serves as a feature for the original problem. An important aspect of this approach is that it can be applied recursively within the new learning problem, allowing for an automated, concept-driven exploration of the large space of possible complex features, similarly to deductive approaches. This allows us to discover powerful connections that an unsupervised approach would have difficulty discovering.
 
 \section{Motivation} \label{motivation}
 
 Before we delve into the exact description of our algorithm, we would like to showcase its main ideas using an illustrative example.
 Suppose we are attempting to identify people with a high risk to be suffering from a certain genetic disease. Assume that the target concept to be discovered is that those at risk are women with ancestors originating from desert areas. To do so, we are given a training sample of sick and healthy people, containing various features, including gender and their full name.
-Assuming we have no additional information, an induction algorithm would likely produce a result similar to that shown in figure \ref{fig:tree_base}. While such a classifier will achieve a low training error, the hundreds of seemingly unrelated surnames will cause it to generalize very poorly. 
+Assuming we have no additional information, an induction algorithm would likely produce a result similar to that shown in figure \ref{fig:tree_base}. While such a classifier will achieve a low training error, the hundreds of seemingly unrelated surnames will cause it to generalize poorly. This phenomenon is known as over-fitting, that is, the model is too adjusted to known data and cannot generalize.
 
 \begin{figure}
 	\centering
@@ -103,12 +89,12 @@ Assuming we have no additional information, an induction algorithm would likely 
 \end{figure}
 
 The above example showcases that without additional features, an induction algorithm will either overfit its classifier to the given data, or otherwise give a very poor result. Even if we attempt to use standard feature generation approaches, there is no additional information that combinations of these features would find.
-However, if we assume that we have access to a relational knowledge base connecting surnames to common countries of origin, we can begin to apply feature generation techniques to the problem, as we can move from the domain of surnames to that of countries. An unsupervised feature generation algorithm might generate a feature for each country of origin, asking whether that surname is common to that country. This would generate dozens of features, most of which are irrelevant to a given example.
+However, if we assume that we have access to a relational knowledge base connecting surnames to common countries of origin, we can begin to apply knowledge-based feature generation techniques to the problem, as we can move from the domain of surnames to that of countries. An unsupervised feature generation algorithm might generate a feature for each country of origin, asking whether that surname is common to that country. This would generate dozens of features, most of which are irrelevant to a given example.
 
-Using our approach, we can improve upon this. In the original problem, the node of value female contains objects of type person. Our goal is to separate this set of people to those at high risk and those at low risk. Therefore, Our method defines a new learning problem with the following training set: The objects are surnames; surnames of people with the disease are labelled as positive. The features for these objects are extracted from the knowledge base.
+Using our approach, we can improve upon this. In the original problem, the node of value female contains objects of type person. Thus, our goal is to separate this set of people to those at high risk and those at low risk. Therefore, Our method defines a new learning problem with the following training set: The objects are surnames; surnames of people with the disease are labelled as positive. The features for these objects are extracted from the knowledge base- their countries of origin.
 Solving the above learning problem through an induction algorithm yields a classifier on surnames. This classifier can be used as a binary feature in the original problem. For example, it can be used as a feature in the node of value female in figure \ref{fig:tree_base}, yielding the tree seen in figure \ref{fig:lvl1_tree}. 
 
-This new feature gives us a better generalization, as we now abstract the long list of surnames to a short list of countries. This result also allows us to capture previously unseen surnames from those countries. However, this is not a sufficient solution, as we have no way of generalizing on previously unseen countries of origin. An immediate advantage of this approach is that rather than generating dozens of features, most of which are irrelevant, we have created a single feature, that is explicitly based on the concept that we are attempting to learn. 
+This new feature gives us a better generalization over the baseline solution, as we now abstract the long list of surnames to a short list of countries. This result also allows us to capture previously unseen surnames from those countries. However, this is not a sufficient solution, as we have no way of generalizing on previously unseen countries of origin. An immediate advantage of this approach is that rather than generating dozens of features like unsupervised techniques, we have created a single feature, that is explicitly based on the concept that we are attempting to learn. 
 
 
 \begin{figure}
@@ -118,9 +104,9 @@ This new feature gives us a better generalization, as we now abstract the long l
 	\label{fig:lvl1_tree}
 \end{figure}
 
-Suppose that we also have access to a knowledge base of facts about countries, such as average temperature, precipitation, and more (one such knowledge base is DBpedia). Using such a knowledge base, an unsupervised approach might generate features looking at the properties of the countries that a given surname is common in, giving us features along the lines of ``is this surname common in a country whose population is over 80 million?". Even without thresholding on the values, we would still have many features, most of which are irrelevant to the learning problem at hand.
+Suppose that we also have access to a knowledge base containing facts regarding countries, such as average temperature, precipitation, and more (one such knowledge base is DBpedia). Using such a knowledge base, an unsupervised approach might generate features looking at the properties of the countries that a given surname is common in, giving us features along the lines of ``is this surname common in a country whose population is over 80 million?". This approach would result in a potential explosion of features, most of which are irrelevant to the learning problem at hand. This problem is greatly exacerbated when the knowledge base contains many relevant relationships, potentially causing an exponential explosion of new features.
 
-Following our approach, we can recursively apply our method while trying to learn the new problem. We create a new training set, the objects of which are countries of origin, and countries of surnames of people with the disease are labelled as positive. This training set is given to an induction algorithm using the relational knowledge base about countries to construct features. The result is a classifier that tries to separate between countries of origin of people with the disease and those without the disease. The classifier is used as a feature by the first level recursive algorithm. The whole process is depicted in figure \ref{fig:moving_to_lvl2}. The resulting two-level recursive classifier is depicted in figure \ref{fig:lvl2_tree}. This constructed feature allows us to concisely and accurately capture the target concept, as the construction process is guided by the target concept, in a manner similar to that of deductive approaches.
+Following our approach, we can recursively apply our method while trying to learn the new problem. We create a new training set, the objects of which are countries of origin, with countries of surnames belonging to people with high risk are labelled as positive. The knowledge base regarding countries is then used to construct features for this new this training set, which can then be given as input to an induction algorithm. As a result of this process, we end up with a classifier that tries to separate between countries of origin of people at risks and those not at risk. This classifier is then used as a feature by the first level recursive algorithm. The whole process is depicted in figure \ref{fig:moving_to_lvl2}. The resulting two-level recursive classifier is depicted in figure \ref{fig:lvl2_tree}. This constructed feature allows us to concisely and accurately capture the target concept, as the construction process is guided by the target concept, in a manner similar to that of deductive approaches.
 
 %We also note that while an unsupervised approach can also create a combination of features that when used together allow us to identify the target concept, the unsupervised nature of the search makes such an attempt computationally expensive, especially when the knowledge base is extensive and multiple logical leaps are necessary.
 
@@ -138,7 +124,7 @@ Following our approach, we can recursively apply our method while trying to lear
 	\label{fig:lvl2_tree}
 \end{figure*}
 
-While this is a simple example, it shows a case where additional information and complex features can result in an overall simpler, more general result. It is important to mention that an unsupervised feature generation approach could also solve this problem, but would be forced to generate more features, many of which irrelevant to the problem at hand. In cases where the knowledge base is extensive and contains many connections between entities, complex relationships that are buried deep beneath the surface problem would be computationally expensive to locate, and hard to evaluate once found.
+While this is a simple example, it showcases the fact that additional information and complex features can result in an overall simpler, more general result. It is important to mention that an unsupervised feature generation approach could also solve this problem, but would be forced to generate more features, many of which irrelevant to the problem at hand. In cases where the knowledge base is extensive and contains many connections between entities, using an unsupervised approach to try and identify complex relationships that are buried deep beneath the surface problem would be computationally expensive to locate, and difficult to evaluate.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -172,7 +158,7 @@ While this is a simple example, it shows a case where additional information and
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 We begin our discussion with the standard definition of an induction problem. 
-Let $O$ be a set of objects. Let $Y=\{0,1\}$ be a set of labels \footnote{we assume binary labels for ease of discussion}. Let $C:O\rightarrow Y$ be the target concept. Let $S=\{(o_{1},y_{1}),\ldots,(o_{m},y_{m})\}$ be a set of labelled examples such that $o_{i}\in O, y_{i}\in Y, C(o_i)=y_i$. 
+Let $O$ be a set of objects. Let $Y=\{0,1\}$ be a set of labels \footnote{We assume binary labels for ease of discussion}. Let $C:O\rightarrow Y$ be the target concept. Let $S=\{(o_{1},y_{1}),\ldots,(o_{m},y_{m})\}$ be a set of labelled examples such that $o_{i}\in O, y_{i}\in Y, C(o_i)=y_i$. 
 Let $F=\{f_{1},\ldots,f_{n}\}$ be a \emph{feature map}, a set of \emph{feature functions} $f_{i}:O\rightarrow Dom_{i}$.  This definition implies a training set represented by feature vectors: $S_F=\{ (\langle f_1(o_i),\ldots,f_n(o_i)\rangle, y_i) | (o_i,y_i) \in S\}$.
 Given $S_F$, we wish to find $h_{S_F}:O\rightarrow Y$ such that the generalization error $Sum(o\in O,h_{S_F}(o)\neq C(o))$ is low.
 
@@ -238,7 +224,7 @@ Now that we have considered all possibilities for the behaviour of a given relat
 	\end{algorithmic}
 \end{algorithm}
 
-We see that this approach allows us to generate features from our knowledge base, regardless of its structure. One example of such features is that of semantic type, features making use of the ``IS-A" relation to note the entity type. We note that this approach create a potentially large number of binary (missing values are treated as zeros) features. While this approach does allow us a degree of generalization, it can only utilize our knowledge base shallowly, from base entities to their values. 
+We see that this approach allows us to generate features from our knowledge base, regardless of the ways in which it interacts with our existing features. One example of such features is that of semantic type, features making use of the ``IS-A" relation to note the entity type. We note that this approach create a potentially large number of binary (missing values are treated as zeros) features. While this approach does allow us a degree of generalization, it can only utilize our knowledge base shallowly, from base entities to their values. 
 Should we try to apply a chain of relations rather than a single one, even ignoring the many possible scenarios, we must consider the exponential nature of such a chain. Without any way to guide our search through the knowledge base, we are likely to generate and increasingly large number of relations, many of which will be irrelevant. Clearly, if we wish to locate more complex relationships and concepts, a different approach is necessary.
 
 \subsection{Creating Learning Problems using Relations} \label{algorithm_section} 
@@ -254,11 +240,11 @@ Given a feature $f_{i}$, we first define $v_i(S) = \{v | (o,y) \in S, f_{i}(o)=v
 e the set of all last names of patients that appeared in the training set.
 We use $v_i(S)$ as our objects. To define a learning problem, we must consider their labels. 
 
-In the simple case, every feature value appears only for a single example in $S$. In that case, we can simply take the same label, with the result being $label(v)=y$ where $f_i(x)=v,(x,y)\in S$.
+In the simple case, every feature value appears only for a single example in $S$. In that case, we can simply take the same label, with the result being $label(v)=y$ where $f_i(x)=v,(x,y)\in S$.%TODO: the example again
 Most features in general, and in machine learning task in particular, however, do not have a unique value for each example. In such cases we would have multiple examples in $S$ such that $f_i(x)=v$. Let us call $S(v)$ the set of such examples. In order for us to give a label for $v$, we must aggregate the labels somehow. As in section \ref{shallow_section}, we can consider three major aggregation functions.
 Using the All aggregation function results in a strict labelling, as a value will be classified as belonging to the target concept only if all examples in which that value has appeared are labelled positive. The result is consistent label: $label(v)=\begin{cases} 1 &\mbox{if } \forall (x,y)\in S(v): y=1\\ 
 0 & \mbox{otherwise } \end{cases}$.
- A more lenient label function is the majority label, taking the Majority aggregation function: $label(v)=majority(\{y|(x,y)\in S(v)\})$.
+ A more lenient label function is the majority label, taking the Majority aggregation function: $label(v)=majority(\{y|(x,y)\in S(v)\})$.%TODO: once agian, how this translates to an example
  
 We now formulate a new learning problem with the new training set
 $S'_i = \{ (v, label(v)) | v \in v_i(S) \}$.
@@ -266,7 +252,7 @@ To fully define our learning problem, we must specify a feature map over $v_i(S)
 0 & \mbox{otherwise } \end{cases}\right)$. If $R_j$ is a partial function, we simply have a feature with missing values. Finally, if $R_j$ is not a function, we can use aggregation as in section \ref{shallow_section} to create features.
 
 Once we have considered all relations in ${\cal R}$, we can generate a feature map for $S'_i$. Given $R_j$, assuming it is relevant to the problem domain, meaning $v_i(S)\cap D_j\neq\emptyset$, we can utilize it as a feature. We then look at all constants $c\in \{R_j(v)|v\in v_i(S)\land R_j(v)\neq \perp\}$. For each such $c$, we add $f_{j,c}:Dom_i\rightarrow \{0,1,\perp\}$ to our feature map. The result of this process is a feature map for $S'_i$, $F_{\cal R}$ which includes all such $f_{j,c}$. We now have a complete induction problem for which we can train a classifier, giving us $h_i:Dom_i\rightarrow Y$. We can then use this $h_i$ on objects in $S$ as discussed above, giving us $f'_{i}(x)=h_{i}(f_{i}(x)), f'_{i}:O\rightarrow Y$. 
-
+%TODO: an example for the constants thing
 We note that once we have an induction problem over $Dom_i$, we can apply our approach recursively on $S'_i$ in order to create additional features. We can see an example of this in section \ref{motivation}, wherein we construct a second-level problem on countries of origin to correctly identify the appropriate conditions that signify high risk countries.
  For each relation $R_j$, rather than restricting it via constants, we take all values of it, and treat those as a feature $f_j(v)=\{v'|R_j(v)=v' \lor v'\in R_j(v) \}$. Assuming $R_j$ is a function or partial function, $f_j$ will also be a function or partial function respectively, and we can then construct a learning problem over values $f_j$, yielding $h_j:D_{j'}\rightarrow Y$. 
  
@@ -561,7 +547,7 @@ Before we look at varying parameters of our algorithm, let us analyze the result
 	\label{fig:svm_base_lvl1}
 \end{figure}
 
-The results show a general trend of improvement, with high ($> 5\%$) or very high ($>10\%$) improvement being common. We also see that for 24 datasets, no improvement is seen. Of these, 4 have no generated features, and 20 have few of them, and those few have not contributed to the performance of the classifier. In a few of the datasets, we see a degrade in accuracy, with 4 of the 100 datasets showing a degrade of over $> 5\%$. 
+The results show a general trend of improvement, with high ($> 5\%$) or very high ($>10\%$) improvement being common. We also see that for 24 datasets, no improvement is seen. Of these, 4 have no generated features, and 20 have few of them, and those have not contributed to the performance of the classifier. In a small subset of the datasets, we see a degrade in accuracy, with 4 of the 100 datasets showing a degrade of over $> 5\%$. 
 This can be attributed to two major causes:
 \begin{itemize}
 	\item Errors in the entity extraction process may lead to the creation of misleading entities and thus features. For instance, the word ``One" may be interpreted as the entity ``One (Metallica song)". 
@@ -768,7 +754,9 @@ works on linked data ? so can talk about uses in search / graph based algorithms
 
 ?????
 
-
+%There are many existing feature generation algorithms, most of which operating by combining existing features in order to produce new ones. The LFC algorithm \cite{ragavan1993complex} combines the original features using logical operators such as $\land ,\lnot$. LFC generates features using the current set of binary features (including generated ones), and requires that any new feature will yield an increase over the original features combined to create it, in terms of information gain.
+%The LDMT algorithm \cite{utgo1991linear} uses linear combinations of the original features to construct more informative ones. This allows for the use of non-binary features in feature generation approaches.
+%The FICUS algorithm \cite{markovitch2002feature} presents a general framework for using any set of constructors to combine features. This essentially generalizes the above approach, allowing for a customizable feature generation framework.
 
 %One of the earliest methods of utilizing relational information is \emph{Inductive Logic Programming(ILP)} \cite{quinlan1990learning,muggleton1991inductive}, which induces a set of first-order formulae that define a good separation of the given training set.
 %Following this work, Relational Learning - techniques designed to utilize relational databases, have become increasingly prevalent. One such technique is that of View Learning \cite{davis2005view}, which generated new tables from existing ones, effectively performing feature generation for relational methods.
@@ -779,7 +767,16 @@ works on linked data ? so can talk about uses in search / graph based algorithms
 
 %Recently, there has been a strong trend of utilizing \emph{Deep Learning} \cite{lecun1998gradient,bengio2009learning} as a feature generation technique. Good examples of this can be seen in FEX \cite{plotz2011featurefull} and DBN2 \cite{kim2013deepfull}. These methods essentially form combinations and transformations on pre-defined features in a semi-supervised manner, thus yielding new, more predictive features. Our approach can be seen as a variation on the same concept, with the transformations being the construction of recursive learning problems, and the combinations being the classifiers constructed in the new problem domain. Our approach differs from those rooted in Deep Learning in both the use of external knowledge to enrich the feature space, and in that we allow more complex combinations in general, as deep learning approaches utilize weighted threshold functions, whereas our approach allows for generic induction algorithms.
 
+%This resource has led to the creation of several new approaches designed to utilize the new, ontology-based representation of knowledge \cite{losch2012graph,rios2014statistical}.
+%It should come as no surprise then, that there have been several efforts in utilizing Linked Data for unsupervised feature generation \cite{cheng2011automatedfull,paulheim2012unsupervisedfull}. \citeA{cheng2011automatedfull} devise a theoretical framework for constructing features from linked data. By specifying entity types relevant to the problem at hand, they restrict the space of possible features to a more manageable size, and allow for the creation of a reasonably small amount of features. They also note that this approach tends to lead to highly sparse feature vectors.
+%\citeA{paulheim2012unsupervisedfull} developed FeGeLOD, an automated, fully unsupervised framework that constructs features by using entity recognition techniques to locate semantically meaningful features in the data set, and expand upon those entities using relations within the Semantic Web. They then use feature selection techniques to remove features with a large percentage of missing, identical, or unique\footnote{Values which only appear in a single example} values. 
 
+%Existing feature generation approaches based on Linked Data can offer great benefits, as they can add useful type information, and often add semantic information such as actors playing in a given movie, or the population of a given city.
+%However, the unsupervised nature of existing approaches limits us greatly when attempting to identify more complex relationships between entities.
+
+%For this reason, newer approaches aim to incorporate additional knowledge from external sources in order to construct new and informative features.
+%\citeA{gabrilovich2009wikipediafull} ,for example, present a method for generating features that are based on Wikipedia concepts. They create a mapping of words to Wikipedia articles, that serve as semantic concepts, then utilize the distance of words in the given text to those concepts as features. This approach produced positive results, especially in domains where data is sparse, such as text categorization on short texts.
+%\citeA{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features. They made use of Roget's Thesaurus as a resource, allowing them to better map words and phrases to their lexical meanings.
 
 \section{Conclusions}
 %finishing up and summary
